# FractalPy

./: .coverage  .coverage.Ferguss-MBP.29434.043502  .coverage.Ferguss-MBP.40560.728727  .gitignore  .readthedocs.yaml  LICENCE.md  Mandelbrot with colour.py  Mandelbrot-version2.ipynb  Mandelbrot.ipynb  README.md  Untitled1.ipynb  __main__.py  demos.ipynb  ffmpeg_H265.sh  ffmpeg_H265_auto.sh  fractal.py  imshowtest.py  main.py  mandel.py  mandeltest.py  old_main.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  worker1.ipynb  worker2.ipynb  worker3.ipynb  worker4.ipynb
.github/workflows/: python-app.yml
coverage/: lcov.info  pytest-coverage.txt
docs/: modules.rst  tests.rst
docs/source/: conf.py  fractalpy.fractals.rst  index.rst
fractal/: __main__.py  cli.py  fractal.py
old_scripts/: Mandelbrot with colour.py  Mandelbrot.ipynb  Untitled1.ipynb  julia set.py  mandeltest.py  test.py
src/: cli.py  fractal.py
src/fractal/: cli.py  fractals.py
src/fractalPy/: __init__.py  __main__.py  cli.py  fractals.py
src/fractalpy/: __init__.py  __main__.py  cli.py  fractal_base.py  fractals.py
src/fractalpy/cli/: cli_main.py
src/fractalpy/cli/commands/: cmd_fractal_base.py  cmd_julia.py  cmd_mandelbrot.py
src/fractalpy/fractals/: fractal_base.py  fractals.py
tests/: test_cli.py  test_fractals.py
