[tool.poetry]
name = "fractalpy"
version = "0.0.14"
description = "A high performance framework for fractal image and video generation"
authors = ["Fergus O'Hanlon <fergusohanlon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Fergus-OH/FractalPy"

[tool.poetry.dependencies]
python = "^3.10.0"
numpy = "^1.23.5"
numba = "^0.56.4"
mpire = "^2.6.0"
matplotlib = "^3.6.2"
imageio = "^2.22.4"
click = "^8.1.3"
importlib-metadata = "^5.0.0"

[tool.poetry.scripts]
fractalpy = 'fractalpy.cli.cli_main:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Fergus-OH/FractalPy/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
