[tool.poetry]
name = "fractalpy"
version = "0.1.1"
description = "A high performance framework for fractal image and video generation"
authors = ["Fergus O'Hanlon <fergusohanlon@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/Fergus-OH/FractalPy"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
numpy = "^1.23.5"
numba = "^0.56.4"
mpire = "^2.6.0"
matplotlib = "^3.6.2"
imageio = "^2.22.4"
click = "^8.1.3"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"

[tool.poetry.scripts]
fractalpy = 'fractalpy.cli.cli_main:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/Fergus-OH/FractalPy/issues"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
